--- a/gradle.properties
+++ b/gradle.properties
@@ -1,23 +1,53 @@
 # Project-wide Gradle settings.
+
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
+
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+# CAMBIADO: Aumentado de 2048m a 4096m
+org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m -Dfile.encoding=UTF-8
+
 # When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. For more details, visit
+# This option should only be used with decoupled projects.
+# For more details, visit
 # https://developer.android.com/r/tools/gradle-multi-project-decoupled-projects
-# org.gradle.parallel=true
+# DESCOMENTADO: Activar modo paralelo
+org.gradle.parallel=true
+
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
 # Enables namespacing of each library's R class so that its R class includes only the
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# Activar daemon de Gradle
+org.gradle.daemon=true
+
+# Activar caché de Gradle
+org.gradle.caching=true
+
+# Jetifier para convertir librerías de Support a AndroidX
+android.enableJetifier=true
+
+# Configuración para evitar OutOfMemoryError
+kotlin.incremental.useClasspathSnapshot=false
+
+# Reducir verbosidad (opcional, pero ayuda)
+org.gradle.console=plain
+
+# Configurar workers (evita usar todos los cores)
+org.gradle.workers.max=4
+
+# Deshabilitar instant run si sigue fallando (descomentar si es necesario)
+# android.defaults.buildfeatures.buildconfig=false
