horizontal mode, english translate, better ui

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:theme="@style/Theme.SeriesApp">
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="fullUser"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.SeriesApp">
